Homepage, Supporter still needs spacing fix

--- a/hero-fronend/src/Components/Profile/Profile.css
+++ b/hero-fronend/src/Components/Profile/Profile.css
@@ -218,3 +218,72 @@ border-radius: 30px;
     margin-top: 15px;    
 }
 
+.TopCampaigns {
+    background-color:rgba(0, 0, 255, 0.96);
+}
+
+
+.cmp-title {
+    font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 22px;
+
+/* or 157% */
+display: flex;
+align-items: center;
+
+color: #FFFFFF;
+}
+
+.cmp-subtitle {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    
+    /* or 157% */
+    display: flex;
+    align-items: center;
+    
+    color: #FFFFFF;
+}
+
+.cmp-t {
+    font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 22px;
+
+/* or 157% */
+display: flex;
+align-items: center;
+
+color: #FFFFFF;
+}
+
+.cmp-p {
+    font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 16px;
+
+/* or 114% */
+display: flex;
+align-items: center;
+text-align: justify;
+
+color: #FFFFFF;
+}
+.ccmp {
+font-style: normal;
+font-weight: 700;
+font-size: 25px;
+line-height: 22px;
+
+/* or 88% */
+display: flex;
+align-items: center;
+
+color: #FFFFFF;
+}
